Updating Home.css (responsive header)

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,21 +1,37 @@
-table {
-    width: 100%;
-    table-layout: fixed;
-}
-
-.tbl-header {
-    background-color: rgba(255, 255, 255, 0.3);
-}
-
-th {
-    padding: 20px 15px;
-    text-align: left;
-    font-weight: 500;
-    font-size: 18px;
-}
-
 body {
-    background: -webkit-linear-gradient(left, #eff7f4, #f1f1f7);
-    background: linear-gradient(to right, #e5eeec, #ebe2e2c0);
-    font-family: 'Roboto', sans-serif;
+  background: -webkit-linear-gradient(left, #eff7f4, #f1f1f7);
+  background: linear-gradient(to right, #e5eeec, #ebe2e2c0);
+  font-family: "Roboto", sans-serif;
+}
+
+.health-articles,
+.calorie-table {
+  background: #f7f6f5;
+  border-radius: 0 0 3px 3px;
+  border-top: 4px solid #8b2f2f;
+  box-shadow: 0 2px 0 0 rgb(0 0 0 / 12%);
+  display: block;
+  font-size: 1rem;
+  margin-top: 0.813em;
+  position: relative;
+  margin: 11px;
+  text-align: center;
+}
+
+.calorie-table-header {
+  text-align: center;
+}
+
+.header-image {
+  width: 100%;
+  height: auto;
+  opacity: 0.6;
+}
+
+.article1 {
+  font-size: larger;
+  text-align: left;
+  border-radius: 0 0 3px 3px;
+  border-top: 4px solid #0301053f;
+  padding: 2px;
 }
