--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,21 +32,22 @@
               </button>
               <a href="#" class="navbar-brand">Calorie Heist</a>
             </div>
+
             <div class="navbar-collapse collapse" id="mobile_menu">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="http://localhost:8000/api/home">Home</a></li>
                 <li>
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                     >About Us <span class="caret"></span
                   ></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Priya Kumari</a></li>
-                    <li><a href="#">Jainendra Dwivedi</a></li>
-                    <li><a href="#">Ansh</a></li>
+                    <li><a href="https://www.linkedin.com/in/priya-kumari-431a09201/" target="_blank">Priya Kumari</a></li>
+                    <li><a href="https://www.linkedin.com/in/jainendradwivedi/" target="_blank">Jainendra Dwivedi</a></li>
+                    <li><a href="https://www.linkedin.com/in/ansh-singh-cse-mnnit/" target="_blank">Ansh Singh</a></li>
                   </ul>
                 </li>
-                <li><a href="#">Fitness Tracker</a></li>
-                <li><a href="#">BMI</a></li>
+                <li><a href="https://ng-fitness-tracker-c1aba.web.app/login" target="_blank">Fitness Tracker</a></li>
+                <li><a href="http://localhost:8000/api/bmi" target="_blank">BMI</a></li>
               </ul>
               <ul class="nav navbar-nav">
                 <li>
@@ -71,7 +72,7 @@
 
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a href="#"
+                  <a href="#"  target="_blank"
                     ><span class="glyphicon glyphicon-user"></span>Profile</a
                   >
                 </li>
