--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,9 +24,16 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span> <input type="submit">
+          <span></span> <input type="submit" value="LOGIN">
         </a>
+        <a href="http://localhost:8000/api/signup">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span> Create Account</a>
       </form>
+    
+    
     </div>
   </body>
 </html>
