--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span><input type="submit">
+          <span></span><input type="submit" value="SIGN UP">
         </a>
       </form>
     </div>
