--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,16 +24,43 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span> <input type="submit" value="LOGIN">
+          <span></span> <input type="submit" value="LOGIN" />
         </a>
         <a href="http://localhost:8000/api/signup">
           <span></span>
           <span></span>
           <span></span>
-          <span></span> Create Account</a>
+          <span></span> Create Account</a
+        >
       </form>
-    
-    
+      <!-- Google Login  -->
+      <!-- Signin button  -->
+      <meta
+        name="google-signin-client_id"
+        content="739918269007-t3aamrjju9ckdg11mvo4n85nc48al17e.apps.googleusercontent.com"
+      />
+      <div
+        class="g-signin2"
+        data-onsuccess="onSignIn"
+        data-scope="https://www.googleapis.com/auth/plus.login"
+        data-accesstype="offline"
+        data-redirecturi="http://localhost:8000/api/signup"
+      ></div>
+      <!-- sign out button  -->
+      <a href="#" onclick="signOut();">Sign out</a>
     </div>
+
+    <!-- scripts -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="../public/javascripts/GoogleSignin.js"></script>
+    <!-- Signout -->
+    <script>
+      function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+          console.log("User signed out.");
+        });
+      }
+    </script>
   </body>
 </html>
