--- a/views/login.ejs
+++ b/views/login.ejs
@@ -37,7 +37,7 @@
       <!-- Signin button  -->
       <meta
         name="google-signin-client_id"
-        content="739918269007-t3aamrjju9ckdg11mvo4n85nc48al17e.apps.googleusercontent.com"
+        content="USER_ID_jd se mango.apps.googleusercontent.com"
       />
       <div
         class="g-signin2"
