--- a/views/calorieApi.ejs
+++ b/views/calorieApi.ejs
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="../stylesheets/home.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
@@ -87,11 +91,12 @@
 
 
             <!--CalorieApi-->
-            <div class="centred">
 
-                <form action="/api/getData" method="post">
-                    <input type="text" name="foodItem">
-                    <button type="submit">get nutrients</button>
+
+            <div class="centred">
+                <form class="example" action="/api/getData" method="post" style="margin:auto;max-width:300px">
+                    <input type="text" placeholder="Search.." name="foodItem">
+                    <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
 
