--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -93,9 +93,9 @@
 
 
 
-                <form action="/api/getData" method="post">
-                    <input type="text" name="foodItem">
-                    <button type="submit">get nutrients</button>
+                <form class="example" action="/api/getData" method="post" style="margin:auto;max-width:300px">
+                    <input type="text" placeholder="Search.." name="foodItem">
+                    <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
             </div>
         </div>
