--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -4,6 +4,10 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 form.example input[type=text] {
     padding: 10px;
     font-size: 17px;
@@ -79,7 +83,7 @@ form.example::after {
 .header-image {
     width: 100%;
     height: auto;
-    opacity: 0.6;
+    filter: blur(8px);
 }
 
 .article1 {
@@ -88,4 +92,66 @@ form.example::after {
     border-radius: 0 0 3px 3px;
     border-top: 4px solid #0301053f;
     padding: 2px;
+}
+
+
+/* search */
+
+#search-box {
+    position: relative;
+    width: 100%;
+    margin: 0;
+}
+
+#search-form {
+    width: 600px;
+    height: 40px;
+    border: 1px solid #999;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    background-color: #fff;
+    overflow: hidden;
+}
+
+#search-text {
+    font-size: 14px;
+    color: #ddd;
+    border-width: 0;
+    background: transparent;
+}
+
+#search-box input[type="text"] {
+    width: 90%;
+    padding: 11px 0 12px 1em;
+    color: #333;
+    outline: none;
+}
+
+#search-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 42px;
+    width: 80px;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    line-height: 42px;
+    border-width: 0;
+    background-color: #4d90fe;
+    -webkit-border-radius: 0px 5px 5px 0px;
+    -moz-border-radius: 0px 5px 5px 0px;
+    border-radius: 0px 5px 5px 0px;
+    cursor: pointer;
+}
+
+.nut-table {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    font-size: small;
+    border-radius: 5px;
 }
