--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -155,3 +155,14 @@ form.example::after {
     font-size: small;
     border-radius: 5px;
 }
+
+.table .thead-dark th {
+    color: #fff;
+    background-color: #343a40;
+    border-color: #454d55;
+}
+
+.table thead th {
+    vertical-align: bottom;
+    border-bottom: 2px solid #dee2e6;
+}
