--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -166,3 +166,9 @@ form.example::after {
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6;
 }
+
+.table td, .table th {
+    padding: .75rem;
+    vertical-align: top;
+    border-top: 1px solid #dee2e6;
+}
