Final Signup.ejs

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="../public/images/favicon.png" />
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +13,7 @@
   <body>
     <div class="form-box">
       <h2>Signup</h2>
-      <form method="post" action="/api/signup">
+      <form method="post" action="/api/signup" autocomplete="off">
         <div class="user-box">
           <input type="text" name="name" required="" id="name" />
           <label>Name</label>
@@ -28,7 +30,7 @@
           <span></span>
           <span></span>
           <span></span>
-          <span></span><input type="submit" value="SIGN UP">
+          <span></span><input type="submit" value="SIGN UP" />
         </a>
       </form>
     </div>
