--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" href="../public/images/favicon.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,7 +26,8 @@
                         <button class="navbar-toggle" data-target="#mobile_menu" data-toggle="collapse">
                 <span class="icon-bar"></span><span class="icon-bar"></span
                 ><span class="icon-bar"></span>
-              </button>
+              </button> 
+              
                         <a href="#" class="navbar-brand">Calorie Heist</a>
                     </div>
 
@@ -41,7 +43,7 @@
                                     <li><a href="https://www.linkedin.com/in/ansh-singh-cse-mnnit/" target="_blank">Ansh Singh</a></li>
                                 </ul>
                             </li>
-                            <li><a href="https://ng-fitness-tracker-c1aba.web.app/login" target="_blank">Fitness Tracker</a></li>
+                            <!-- <li><a href="https://ng-fitness-tracker-c1aba.web.app/login" target="_blank">Fitness Tracker</a></li> -->
                             <li><a href="http://localhost:8000/api/bmi" target="_blank">BMI</a></li>
                         </ul>
                         <ul class="nav navbar-nav">
@@ -49,9 +51,8 @@
                                 <form action="" class="navbar-form">
                                     <div class="form-group">
                                         <div class="input-group">
-                                            <input type="search" name="search" id="" placeholder="Search Anything Here..." class="form-control" />
-                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span
-                        ></span>
+                                            <input type="search" name="search" id="" placeholder="Search Healthy..." class="form-control" />
+                                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                                         </div>
                                     </div>
                                 </form>
@@ -60,17 +61,17 @@
 
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a href="#" target="_blank"><span class="glyphicon glyphicon-user"></span>Profile</a
+                                <a href="#" target="_blank"><span class="glyphicon glyphicon-user"></span>Profile</a 
                   >
                 </li>
                 <li>
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                    ><span class="glyphicon glyphicon-log-in"></span>Settings
+                    ><span class="glyphicon glyphicon-log-in"></span> Settings
                     <span class="caret"></span
                   ></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Logout</a></li>
-                                    <li><a href="#">Sample</a></li>
+                                    <li><a href="http://localhost:8000/api/">Logout</a></li>
+                                    <!-- <li><a href="#">Sample</a></li> -->
                                 </ul>
                             </li>
                         </ul>
@@ -84,25 +85,26 @@
     <div class="calorie-table">
         <div class="calorie-table-header">
             <img class="header-image" src="../images/food.jpg" alt="oops sorry" style="width: 100;">
-            <h1 class="centre" style="font-size: 46px !important;">CALORIE-HEIST</h1>
+            <h1 class="centre" style="font-size: 46px !important; color: white !important; ">CALORIE - HEIST</h1>
 
-            <h1 style="font-size: 46px !important; 
+            <h1 style="
+            font-size: 46px !important;
             position: absolute;
             top: 17%;
             left: 50%;
             transform: translate(-50%, -50%);
-            ">Get Nutrition Facts Now</h1>
+            color: white !important;
+            padding-bottom: 50px !important;
+            font-family: 'Shizuru', cursive;
+            
+            ">KNOW WHAT YOU EAT</h1>
+            <br><br><br><br>
 
             <!--CalorieApi-->
             <div class="centred">
-
-                <!-- <form class="example" action="/api/getData" method="post">
-                    <input type="text" placeholder="Search.." name="foodItem">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form> -->
                 <div id='search-box'>
                     <form id='search-form' action="/api/getData" method='post'>
-                        <input id='search-text' name='foodItem' placeholder='Search' type='text' />
+                        <input id='search-text' name='foodItem' placeholder='How much fat in 2 Bananas?' type='text' />
                         <button id='search-button' type='submit'><span>Nutrition</span></button>
                     </form>
                 </div>
